Адаптивная сетка блока reviews

--- a/source/index.html
+++ b/source/index.html
@@ -135,27 +135,34 @@
         </div>
       </section>
 
-      <!-- <section class="page-content__reviews reviews reviews-slider">
+      <section class="page-content__reviews reviews">
         <div class="reviews__wrapper">
           <h2 class="visually-hidden">Отзывы:</h2>
-          <ul class="reviews__list reviews-slider__list">
-            <li class="reviews__item review reviews-slider__item" id="review-slider-1">
-              <p class="review__author">Николай Петров</p>
-              <p class="review__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</p>
-            </li>
-            <li class="reviews__item review reviews-slider__item" id="review-slider-2">
-              <p class="review__author">Николай Петров</p>
-              <p class="review__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</p>
-            </li>
-            <li class="reviews__item review reviews-slider__item" id="review-slider-3">
-              <p class="review__author">Николай Петров</p>
-              <p class="review__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</p>
-            </li>
-          </ul>
-          <div class="reviews__toggles reviews-slider__toggles">
-            <button class="reviews-slider__toggle" type="button" id="review-toggle-1">1</button>
-            <button class="reviews-slider__toggle" type="button" id="review-toggle-2">2</button>
-            <button class="reviews-slider__toggle" type="button" id="review-toggle-3">3</button>
+          <div class="reviews-slider">
+            <input class="reviews-slider__radio reviews-slider__tab-1" type="radio" id="review-tab-1" name="toggle" checked>
+            <input class="reviews-slider__radio reviews-slider__tab-2" type="radio" id="review-tab-2" name="toggle">
+            <input class="reviews-slider__radio reviews-slider__tab-3" type="radio" id="review-tab-3" name="toggle">
+            <ul class="reviews__list reviews-slider__list">
+              <li class="reviews__item review reviews-slider__item" id="review-slider-1">
+                <p class="review__author">Николай Петров <span class="review__post">25 лет, водитель трамвая</span></p>
+                <p class="review__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</p>
+              </li>
+              <li class="reviews__item review reviews-slider__item" id="review-slider-2">
+                <p class="review__author">Николай Петров 2 <span class="review__post">25 лет, водитель трамвая</span></p>
+                <p class="review__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</p>
+              </li>
+              <li class="reviews__item review reviews-slider__item" id="review-slider-3">
+                <p class="review__author">Николай Петров 3 <span class="review__post">25 лет, водитель трамвая</span></p>
+                <p class="review__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</p>
+              </li>
+            </ul>
+            <div class="reviews__toggles reviews-slider__toggles">
+              <label class="reviews-slider__toggle" for="review-tab-1"><span class="visually-hidden">1</span></label>
+              <label class="reviews-slider__toggle" for="review-tab-2"><span class="visually-hidden">2</span></label>
+              <label class="reviews-slider__toggle" for="review-tab-3"><span class="visually-hidden">3</span></label>
+            </div>
+            <button class="reviews-slider__back reviews-slider__back--disable" type="button"><span class="visually-hidden">Назад</span></button>
+            <button class="reviews-slider__next" type="button"><span class="visually-hidden">Вперед</span></button>
           </div>
         </div>
       </section>
