Адаптивная сетка блока rates

--- a/source/index.html
+++ b/source/index.html
@@ -167,12 +167,13 @@
         </div>
       </section>
 
-      <!-- <section class="page-content__rates rates">
+      <section class="page-content__rates rates">
         <div class="rates__wrapper">
           <h2 class="visually-hidden">Тарифы:</h2>
           <table class="rates__table rate">
             <tbody>
               <tr>
+                <th class="rate__header rate__header--first"></th>
                 <th class="rate__header">
                   База
                   <span class="rate__price">1,99 USD</span>
@@ -188,51 +189,60 @@
                 </th>
               </tr>
               <tr>
-                <td class="rate__cell">
+                <td class="rate__cell rate__cell--first">
                   Розовый фильтр
+                </td>
+                <td class="rate__cell">
+                  <span class="rate__text">Розовый фильтр</span>
                   <span class="rate__option rate__option--yes"></span>
                   <span class="visually-hidden"> - Да</span>
                 </td>
                 <td class="rate__cell">
-                  Розовый фильтр
+                  <span class="rate__text">Розовый фильтр</span>
                   <span class="rate__option rate__option--yes"></span>
                   <span class="visually-hidden"> - Да</span>
                 </td>
                 <td class="rate__cell">
-                  Розовый фильтр
+                  <span class="rate__text">Розовый фильтр</span>
                   <span class="rate__option rate__option--yes"></span>
                   <span class="visually-hidden"> - Да</span>
                 </td>
               <tr>
-                <td class="rate__cell">
+                <td class="rate__cell rate__cell--first">
                   Смайлики
+                </td>
+                <td class="rate__cell">
+                  <span class="rate__text">Смайлики</span>
                   <span class="rate__option rate__option--no"></span>
                   <span class="visually-hidden"> - Нет</span>
                 </td>
                 <td class="rate__cell">
-                  Смайлики
+                  <span class="rate__text">Смайлики</span>
                   <span class="rate__option rate__option--yes"></span>
                   <span class="visually-hidden"> - Да</span>
                 </td>
                 <td class="rate__cell">
-                  Смайлики
+                  <span class="rate__text">Смайлики</span>
                   <span class="rate__option rate__option--yes"></span>
                   <span class="visually-hidden"> - Да</span>
                 </td>
               </tr>
               <tr>
-                <td class="rate__cell">
+                <td class="rate__cell rate__cell--first">
                   Комментарии
+                </td>
+                <td class="rate__cell">
+                  <span class="rate__text">Комментарии</span>
                   <span class="rate__option rate__option--no"></span>
                   <span class="visually-hidden"> - Нет</span>
                 </td>
                 <td class="rate__cell">
-                  Комментарии
+                  <span class="rate__text">Комментарии</span>
                   <span class="rate__option rate__option--no"></span>
                   <span class="visually-hidden"> - Нет</span>
                 </td>
                 <td class="rate__cell">
-                  Комментарии
+                  <span class="rate__text">Комментарии</span>
                   <span class="rate__option rate__option--yes"></span>
                   <span class="visually-hidden"> - Да</span>
                 </td>
@@ -240,9 +250,9 @@
             </tbody>
           </table>
           <div class="rates__toggles">
-            <button class="rates__toggle" type="button" id="rates-toggle-base">1</button>
-            <button class="rates__toggle" type="button" id="rates-toggle-standart">2</button>
-            <button class="rates__toggle" type="button" id="rates-toggle-unlimited">3</button>
+            <button class="rates__toggle" type="button" id="rates-toggle-base"><span class="visually-hidden">1</span></button>
+            <button class="rates__toggle" type="button" id="rates-toggle-standart"><span class="visually-hidden">2</span></button>
+            <button class="rates__toggle" type="button" id="rates-toggle-unlimited"><span class="visually-hidden">3</span></button>
           </div>
         </div>
       </section>
@@ -267,7 +277,7 @@
           <div class="map__img"></div>
           <div class="map__marker"></div>
         </div>
-      </section> -->
+      </section>
 
     </main>
 <!--
