Адаптивная сетка блока contacts

--- a/source/index.html
+++ b/source/index.html
@@ -262,7 +262,7 @@
           <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
           <div class="contact">
             <p class="contact__title">Звоните:</p>
-            <a class="contact__link" href="tel:78125556666">+7(812)555-66-66</a>
+            <a class="contact__link contact__link" href="tel:78125556666">+7 (812) 555-66-66</a>
           </div>
           <div class="contact">
             <p class="contact__title">Пишите:</p>
