--- a/source/index.html
+++ b/source/index.html
@@ -264,7 +264,7 @@
             <p class="contact__title">Звоните:</p>
             <a class="contact__link contact__link" href="tel:78125556666">+7 (812) 555-66-66</a>
           </div>
-          <div class="contact">
+          <div class="contact contact--email">
             <p class="contact__title">Пишите:</p>
             <a class="contact__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </div>
@@ -280,14 +280,14 @@
       </section>
 
     </main>
-<!--
+
     <footer class="page-footer footer page-footer--hide">
       <div class="footer__wrapper">
         <a class="footer__logo" href="index.html">
           <img src="img/logo-pink-blue-mobile.svg" width="147" height="40" alt="PINK">
         </a>
         <ul class="footer__social social">
-          <li>
+          <li class="social__item">
             <a class="social__button social__button--twitter" href="#">
               <svg class="social__icon" width="18" height="14">
                 <use xlink:href="#icon-twitter" x="0" y="0" />
@@ -295,7 +295,7 @@
               <span class="visually-hidden">Twitter</span>
             </a>
           </li>
-          <li>
+          <li class="social__item">
             <a class="social__button social__button--facebook" href="#">
               <svg class="social__icon" width="9" height="18">
                 <use xlink:href="#icon-facebook" x="0" y="0" />
@@ -303,7 +303,7 @@
               <span class="visually-hidden">Facebook</span>
             </a>
           </li>
-          <li>
+          <li class="social__item">
             <a class="social__button social__button--youtube" href="#">
               <svg class="social__icon" width="15" height="13">
                 <use xlink:href="#icon-youtube" x="0" y="0" />
@@ -321,7 +321,7 @@
           </a>
         </p>
       </div>
-    </footer> -->
+    </footer>
 
     <script src="js/scripts.js"></script>
   </body>
