Исправление замечаний по сетке index.html

--- a/source/form.html
+++ b/source/form.html
@@ -24,7 +24,7 @@
 
       <div class="page-header__top">
         <div class="page-header__main-wrapper">
-          <div class="page-header__wrapper page-header__wrapper--desktop">
+          <div class="page-header__wrapper">
             <a class="page-header__logo" href="#">
               <picture>
                   <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
