--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
 
       <div class="page-header__top page-header__top--open">
         <div class="page-header__main-wrapper">
-          <div class="page-header__wrapper page-header__wrapper--desktop">
+          <div class="page-header__wrapper">
             <a class="page-header__logo" href="#">
               <picture>
                 <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
@@ -100,24 +100,24 @@
         </div>
         <div class="features__content">
           <div class="features__wrapper-tablet">
-            <div class="features__list feature">
-              <div class="feature__item feature__wrapper feature__item--screen-1">
+            <div class="features__list">
+              <div class="feature feature--screen-1">
                 <h3 class="feature__title">Поднимает настроение</h3>
                 <p class="feature__info">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
               </div>
-              <div class="feature__item feature__wrapper feature__item--screen-2">
+              <div class="feature feature--screen-2">
                 <h3 class="feature__title">Меняет мир вокруг</h3>
                 <p class="feature__info">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект!</p>
               </div>
-              <div class="feature__item feature__wrapper feature__item--screen-3">
+              <div class="feature feature--screen-3">
                 <h3 class="feature__title">Заводит новых друзей</h3>
                 <p class="feature__info">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых!</p>
               </div>
             </div>
-            <picture class="features__main-picture">
+            <!-- <picture class="features__main-picture">
               <source media="(min-width: 660px)" srcset="img/iphone-screen-3-tablet@1x.png">
               <img class="features__image" src="img/iphone-screen-mobile@1x.png" alt="Телефон c розовой фотографией">
-            </picture>
+            </picture> -->
           </div>
         </div>
       </section>
