--- a/source/photo.html
+++ b/source/photo.html
@@ -65,6 +65,7 @@
           <a class="photo-blog__link" href="#">
             <div class="photo-blog__of-day">Панорама дня</div>
             <picture>
+              <source media="(min-width: 960px)" srcset="img/panorama-desktop@1x.jpg">
               <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg">
               <img class="photo-blog__image" src="img/panorama-mobile@1x.jpg" alt="Фото дня">
             </picture>
@@ -87,7 +88,11 @@
         <div class="photos__wrapper">
           <article class="photo-blog">
             <a class="photo-blog__link" href="#">
-              <img class="photo-blog__image" src="img/photo-car-mobile@1x.jpg" alt="Фото дня" width="280" height="180">
+              <picture>
+                <source media="(min-width: 960px)" srcset="img/photo-car-desktop@1x.jpg">
+                <source media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.jpg">
+                <img class="photo-blog__image" src="img/photo-car-mobile@1x.jpg" alt="Фото дня">
+              </picture>
             </a>
             <div class="photo-blog__content">
               <header class="photo-blog__info">
@@ -104,7 +109,11 @@
 
           <article class="photo-blog">
             <a class="photo-blog__link" href="#">
-              <img class="photo-blog__image" src="img/photo-drumset-mobile@1x.jpg" alt="Фото дня"  width="280" height="180">
+              <picture>
+                <source media="(min-width: 960px)" srcset="img/photo-drumset-desktop@1x.jpg">
+                <source media="(min-width: 660px)" srcset="img/photo-drumset-tablet@1x.jpg">
+                <img class="photo-blog__image" src="img/photo-drumset-mobile@1x.jpg" alt="Фото дня"  width="280" height="180">
+              </picture>
             </a>
             <div class="photo-blog__content">
               <header class="photo-blog__info">
@@ -121,7 +130,11 @@
 
           <article class="photo-blog">
             <a class="photo-blog__link" href="#">
-              <img class="photo-blog__image" src="img/photo-window-mobile@1x.jpg" alt="Фото дня"  width="280" height="180">
+              <picture>
+                <source media="(min-width: 960px)" srcset="img/photo-window-desktop@1x.jpg">
+                <source media="(min-width: 660px)" srcset="img/photo-window-tablet@1x.jpg">
+                <img class="photo-blog__image" src="img/photo-window-mobile@1x.jpg" alt="Фото дня">
+              </picture>
             </a>
             <div class="photo-blog__content">
               <header class="photo-blog__info">
@@ -138,7 +151,11 @@
 
           <article class="photo-blog">
             <a class="photo-blog__link" href="#">
-              <img class="photo-blog__image" src="img/photo-fair-mobile@1x.jpg" alt="Фото дня"  width="280" height="180">
+              <picture>
+                <source media="(min-width: 960px)" srcset="img/photo-fair-desktop@1x.jpg">
+                <source media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.jpg">
+                <img class="photo-blog__image" src="img/photo-fair-mobile@1x.jpg" alt="Фото дня">
+              </picture>
             </a>
             <div class="photo-blog__content">
               <header class="photo-blog__info">
@@ -155,7 +172,11 @@
 
           <article class="photo-blog">
             <a class="photo-blog__link" href="#">
-              <img class="photo-blog__image" src="img/photo-pov-mobile@1x.jpg" alt="Фото дня"  width="280" height="180">
+              <picture>
+                <source media="(min-width: 960px)" srcset="img/photo-pov-desktop@1x.jpg">
+                <source media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.jpg">
+                <img class="photo-blog__image" src="img/photo-pov-mobile@1x.jpg" alt="Фото дня">
+              </picture>
             </a>
             <div class="photo-blog__content">
               <header class="photo-blog__info">
@@ -172,7 +193,11 @@
 
           <article class="photo-blog">
             <a class="photo-blog__link" href="#">
-              <img class="photo-blog__image" src="img/photo-wing-mobile@1x.jpg" alt="Фото дня"  width="280" height="180">
+              <picture>
+                <source media="(min-width: 960px)" srcset="img/photo-wing-desktop@1x.jpg">
+                <source media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.jpg">
+                <img class="photo-blog__image" src="img/photo-wing-mobile@1x.jpg" alt="Фото дня">
+              </picture>
             </a>
             <div class="photo-blog__content">
               <header class="photo-blog__info">
@@ -187,72 +212,66 @@
             </div>
           </article>
 
-        </div> <!-- photos__list -->
-      </section> <!-- page-content__photos -->
+        </div>
+      </section>
 
       <section class="page-content__photo-uploads uploads">
+
         <div class="uploads__wrapper uploads__header">
           <h2 class="uploads__title">Затмите их всех!<br> Выкладывайте все, что накопилось в телефоне!</h2>
         </div>
-        <!-- <form class="uploads__form" method="get" action="https://echo.htmlacademy.ru" id="uploads">
-          <div class="uploads__wrapper">
+
+        <form class="uploads__form" method="get" action="https://echo.htmlacademy.ru" id="uploads">
+          <div class="uploads__wrapper uploads__layout">
             <fieldset class="uploads__picture">
               <img class="uploads__downloaded" src="img/photo-road-mobile@1x.jpg" alt="Загружаемая фотография" width="280" height="374">
             </fieldset>
-          </div>
-          <fieldset class="uploads__filters filters">
-            <div class="uploads__wrapper">
+            <fieldset class="uploads__filters filters">
               <div class="filters__toggles">
-                <button class="filters__toggle filters__toggle--active filters__toggle--crop">
-                  <span class="visually-hidden">Фильтр кадрирования</span>
-                </button>
-                <button class="filters__toggle filters__toggle--fill">
-                  <span class="visually-hidden">Фильтр заливка</span>
-                </button>
-                <button class="filters__toggle filters__toggle--contrast">
-                  <span class="visually-hidden">Фильтр контрастность</span>
-                </button>
-              </div>
-              <div class="filters__list">
-                <div class="filters__item">
-                  <label class="visually-hidden" for="filter-crop-value">Настройка кадрирования</label>
-                  <input class="visually-hidden" type="range" id="filter-crop-value" name="filter-fill" min="0" max="10" value="7">
+                <div class="filters__item filters__item--active">
+                  <button class="filters__toggle filters__toggle--active filters__toggle--crop"><span class="visually-hidden">Фильтр кадрирования</span></button>
+                  <input class="visually-hidden" type="range" id="filter-crop-value" name="filter-crop" min="0" max="10" value="7">
                   <div class="filters__range range">
                     <div class="range__controls">
                       <div class="range__scale"></div>
-                      <div class="range__runner"></div>
+                      <div class="range__runner range__runner--crop"></div>
                     </div>
                   </div>
                 </div>
                 <div class="filters__item">
-                  <label class="visually-hidden" for="filter-fill-value">Настройка заливки</label>
+                  <button class="filters__toggle filters__toggle--fill">
+                    <span class="visually-hidden">Фильтр заливка</span>
+                  </button>
                   <input class="visually-hidden" type="range" id="filter-fill-value" name="filter-fill" min="0" max="10" value="7">
                   <div class="filters__range range">
                     <div class="range__controls">
                       <div class="range__scale"></div>
-                      <div class="range__runner"></div>
+                      <div class="range__runner range__runner--fill"></div>
                     </div>
                   </div>
                 </div>
                 <div class="filters__item">
-                  <label class="visually-hidden" for="filter-contrast-value">Настройка контрастности</label>
+                  <button class="filters__toggle filters__toggle--contrast">
+                    <span class="visually-hidden">Фильтр контрастность</span>
+                  </button>
                   <input class="visually-hidden" type="range" id="filter-contrast-value" name="filter-contrast" min="0" max="10" value="7">
                   <div class="filters__range range">
                     <div class="range__controls">
                       <div class="range__scale"></div>
-                      <div class="range__runner"></div>
+                      <div class="range__runner range__runner--contrast"></div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </fieldset>
-          <div class="uploads__wrapper uploads__send-post">
-            <button class="button uploads__post" type="submit">Запостить</button>
-            <button class="button uploads__undo" type="Reset">Отмена</button>
+              <div class="uploads__send-post">
+                <button class="button uploads__post" type="submit">Запостить</button>
+                <button class="button uploads__undo" type="Reset">Отмена</button>
+              </div>
+            </fieldset>
           </div>
-        </form> -->
-      </section> <!-- page-content__photo-uploads -->
+        </form>
+
+      </section>
 
     </main>
 
