Адаптивная сетка для form.html (планшет)

--- a/source/photo.html
+++ b/source/photo.html
@@ -223,10 +223,10 @@
 
         <form class="uploads__form" method="get" action="https://echo.htmlacademy.ru" id="uploads">
           <div class="uploads__wrapper uploads__layout">
-            <fieldset class="uploads__picture">
+            <div class="uploads__picture">
               <img class="uploads__downloaded" src="img/photo-road-mobile@1x.jpg" alt="Загружаемая фотография" width="280" height="374">
-            </fieldset>
-            <fieldset class="uploads__filters filters">
+            </div>
+            <div class="uploads__filters filters">
               <div class="filters__toggles">
                 <div class="filters__item filters__item--active">
                   <button class="filters__toggle filters__toggle--active filters__toggle--crop"><span class="visually-hidden">Фильтр кадрирования</span></button>
@@ -267,7 +267,7 @@
                 <button class="button uploads__post" type="submit">Запостить</button>
                 <button class="button uploads__undo" type="Reset">Отмена</button>
               </div>
-            </fieldset>
+            </div>
           </div>
         </form>
 
