--- a/source/form.html
+++ b/source/form.html
@@ -67,91 +67,103 @@
       <section class="page-content__contest contest">
 
         <div class="contest__header">
-          <div class="contest__wrapper">
-            <h2 class="contest__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! </h2>
-          </div>
-        </div> <!-- contest__header -->
+          <h2 class="contest__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! <span class="contest__title-note">Пожалуйста, заполните форму ниже:</span></h2>
+        </div>
 
         <form class="contest__form form" method="get" action="https://echo.htmlacademy.ru">
 
-          <fieldset class="contest__contestant">
-            <legend class="visually-hidden">Ваше ФИО:</legend>
-            <label class="form__label" for="first-name-field">Фамилия:</label>
-            <input class="form__text-field" type="text" id="first-name-field" name="first-name" placeholder="Укажите фамилию *" required>
-            <label class="form__label" for="last-name-field">Имя:</label>
-            <input class="form__text-field" type="text" id="last-name-field" name="last-name" placeholder="Введите ваше имя *" required>
-            <label class="form__label" for="sur-name-field">Отчество:</label>
-            <input class="form__text-field" type="text" id="sur-name-field" name="sur-name" placeholder="Ну и отчество тоже">
-          </fieldset>
+          <div class="contest__wrapper-tablet">
 
-          <div class="contest__background">
-            <fieldset class="contest__achievement">
-              <legend class="form__legend">Ваши безбашинные достижения в путешествии</legend>
-              <ul class="form__list">
-                <li class="form__option">
-                  <input class="visually-hidden form__check" type="checkbox" name="achievement-item-1" id="achievement-item-field-1" checked>
-                  <label class="form__label-in-list form__checkbox" for="achievement-item-field-1">Сделал селфи с акулой</label>
-                </li>
-                <li class="form__option">
-                  <input class="visually-hidden form__check" type="checkbox" name="achievement-item-2" id="achievement-item-field-2" checked>
-                  <label class="form__label-in-list form__checkbox" for="achievement-item-field-2">Обгорел на пляже</label>
-                </li>
-                <li class="form__option">
-                  <input class="visually-hidden form__check" type="checkbox" name="achievement-item-3" id="achievement-item-field-3">
-                  <label class="form__label-in-list form__checkbox" for="achievement-item-field-3">Видел Чака Норриса</label>
-                </li>
-                <li class="form__option">
-                  <input class="visually-hidden form__check" type="checkbox" name="achievement-item-4" id="achievement-item-field-4">
-                  <label class="form__label-in-list form__checkbox" for="achievement-item-field-4">Накупил сувениров</label>
-                </li>
-                <li class="form__option">
-                  <input class="visually-hidden form__check" type="checkbox" name="achievement-item-5" id="achievement-item-field-5" checked>
-                  <label class="form__label-in-list form__checkbox" for="achievement-item-field-5" >Удержал башню</label>
-                <li class="form__option">
-                  <input class="visually-hidden form__check" type="checkbox" name="achievement-item-6" id="achievement-item-field-6">
-                  <label class="form__label-in-list form__checkbox" for="achievement-item-field-6">Разгромил отель</label>
-                </li>
-              </ul>
-            </fieldset>
-          </div>
-
-          <fieldset class="contest__contact">
-            <legend class="visually-hidden">Контактные сведения</legend>
-              <label class="form__label" for="phone-number-field">Номер телефона</label>
-              <input class="form__text-field" type="tel" name="phone" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}" placeholder="Номер пожалуйста" id="phone-number-field">
-              <label class="form__label" for="email-field">Адрес почты</label>
-              <input class="form__text-field" type="email" id="email-field" name="email" placeholder="Введите почту *" required>
-          </fieldset>
-
-          <div class="contest__background">
-            <fieldset class="contest__apps">
-              <legend class="form__legend">С каким приложением путешествовали?</legend>
-              <ul class="form__list">
-                <li class="form__option">
-                  <input class="visually-hidden form__check" type="radio" name="apps" id="apps-item-field-1" checked>
-                  <label class="form__label-in-list form__radio" for="apps-item-field-1">Pink для iOS</label>
-                </li>
-                <li class="form__option">
-                  <input class="visually-hidden form__check" type="radio" name="apps" id="apps-item-field-2">
-                  <label class="form__label-in-list form__radio" for="apps-item-field-2">Pink для Android</label>
-                </li>
-                <li class="form__option">
-                  <input class="visually-hidden form__check" type="radio" name="apps" id="apps-item-field-3">
-                  <label class="form__label-in-list form__radio" for="apps-item-field-3">Windows Phone</label>
-                </li>
-              </ul>
-            </fieldset>
-          </div>
-
-          <fieldset class="contest__comment">
-            <legend class="form__legend">Опишите свои эмоции</legend>
-            <textarea class="form__textarea" name="comment" rows="5" placeholder="Можно прям в красках, не стесняйтесь в выражениях" id="comment-field"></textarea>
+            <div class="contest__contestant">
+              <legend class="visually-hidden">Ваше ФИО:</legend>
+              <div class="form__field-contestant">
+                <label class="form__label" for="first-name-field">Фамилия:</label>
+                <input class="form__text-field" type="text" id="first-name-field" name="first-name" placeholder="Укажите фамилию *" required>
+              </div>
+              <div class="form__field-contestant">
+                <label class="form__label" for="last-name-field">Имя:</label>
+                <input class="form__text-field" type="text" id="last-name-field" name="last-name" placeholder="Введите ваше имя *" required>
+              </div>
+              <div class="form__field-contestant">
+                <label class="form__label" for="sur-name-field">Отчество:</label>
+                <input class="form__text-field" type="text" id="sur-name-field" name="sur-name" placeholder="Ну и отчество тоже">
+              </div>
             </div>
-          </fieldset>
 
-          <div class="contest__wrapper">
-            <button class="button form__submit" type="submit">Отправить форму</button>
-            <p class="form__submit-text"><span class="form__submit-text--red">*</span> — обязательные поля</p>
+            <div class="contest__background contest__achievement-layout">
+              <fieldset class="contest__achievement">
+                <legend class="form__legend">Ваши безбашинные достижения в путешествии</legend>
+                <ul class="form__list">
+                  <li class="form__option">
+                    <input class="visually-hidden form__check" type="checkbox" name="achievement-item-1" id="achievement-item-field-1" checked>
+                    <label class="form__label-in-list form__checkbox" for="achievement-item-field-1">Сделал селфи с акулой</label>
+                  </li>
+                  <li class="form__option">
+                    <input class="visually-hidden form__check" type="checkbox" name="achievement-item-2" id="achievement-item-field-2" checked>
+                    <label class="form__label-in-list form__checkbox" for="achievement-item-field-2">Обгорел на пляже</label>
+                  </li>
+                  <li class="form__option">
+                    <input class="visually-hidden form__check" type="checkbox" name="achievement-item-3" id="achievement-item-field-3">
+                    <label class="form__label-in-list form__checkbox" for="achievement-item-field-3">Видел Чака Норриса</label>
+                  </li>
+                  <li class="form__option">
+                    <input class="visually-hidden form__check" type="checkbox" name="achievement-item-4" id="achievement-item-field-4">
+                    <label class="form__label-in-list form__checkbox" for="achievement-item-field-4">Накупил сувениров</label>
+                  </li>
+                  <li class="form__option">
+                    <input class="visually-hidden form__check" type="checkbox" name="achievement-item-5" id="achievement-item-field-5" checked>
+                    <label class="form__label-in-list form__checkbox" for="achievement-item-field-5" >Удержал башню</label>
+                  <li class="form__option">
+                    <input class="visually-hidden form__check" type="checkbox" name="achievement-item-6" id="achievement-item-field-6">
+                    <label class="form__label-in-list form__checkbox" for="achievement-item-field-6">Разгромил отель</label>
+                  </li>
+                </ul>
+              </fieldset>
+            </div>
+
+            <div class="contest__contact">
+              <legend class="form__legend form__legend--mobile-hide">Контактная информация</legend>
+                <div class="form__field-contact form__field-contact--phone">
+                  <label class="form__label form__label--contact" for="phone-number-field">Номер телефона</label>
+                  <input class="form__text-field form__text-field--contact" type="tel" name="phone" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}" placeholder="Номер пожалуйста" id="phone-number-field">
+                </div>
+                <div class="form__field-contact form__field-contact--email">
+                  <label class="form__label form__label--contact" for="email-field">Адрес почты</label>
+                  <input class="form__text-field form__text-field--contact" type="email" id="email-field" name="email" placeholder="Введите почту *" required>
+                </div>
+            </div>
+
+            <div class="contest__background contest__apps-layout">
+              <fieldset class="contest__apps">
+                <legend class="form__legend form__legend--apps">С каким приложением путешествовали?</legend>
+                <ul class="form__list">
+                  <li class="form__option">
+                    <input class="visually-hidden form__check" type="radio" name="apps" id="apps-item-field-1" checked>
+                    <label class="form__label-in-list form__radio" for="apps-item-field-1">Pink для iOS</label>
+                  </li>
+                  <li class="form__option">
+                    <input class="visually-hidden form__check" type="radio" name="apps" id="apps-item-field-2">
+                    <label class="form__label-in-list form__radio" for="apps-item-field-2">Pink на Android</label>
+                  </li>
+                  <li class="form__option">
+                    <input class="visually-hidden form__check" type="radio" name="apps" id="apps-item-field-3">
+                    <label class="form__label-in-list form__radio" for="apps-item-field-3">Windows Phone</label>
+                  </li>
+                </ul>
+              </fieldset>
+            </div>
+
+            <fieldset class="contest__comment">
+              <legend class="form__legend">Опишите свои эмоции</legend>
+              <textarea class="form__textarea" name="comment" rows="5" placeholder="Можно прям в красках, не стесняясь в выражениях" id="comment-field"></textarea>
+              </div>
+            </fieldset>
+
+            <div class="contest__send-form">
+              <button class="button form__submit" type="submit">Отправить форму</button>
+              <p class="form__submit-note"><span class="form__submit-note--red">*</span> — обязательные поля</p>
+            </div>
+
           </div>
 
         </form>
