--- a/source/form.html
+++ b/source/form.html
@@ -282,6 +282,26 @@
       </div>
     </footer>
 
+    <section class="popup popup__send-request">
+      <div class="popup__content">
+        <h2 class="popup__title">Ваша заявка отправлена</h2>
+        <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим&nbsp;вас.</p>
+      </div>
+      <div class="popup__bottom">
+        <button class="button popup__close" type="button">Закрыть окно</button>
+      </div>
+    </section>
+
+    <section class="popup popup__failure">
+      <div class="popup__content">
+        <h2 class="popup__title">Что-то пошло не так!</h2>
+        <p class="popup__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button class="button popup__close popup__close--failure" type="button">Закрыть окно</button>
+      </div>
+    </section>
+
+    <div class="popup popup__overlay"></div>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
