Доработка popup для разных расширениях экрана

--- a/source/form.html
+++ b/source/form.html
@@ -296,7 +296,9 @@
       <div class="popup__content">
         <h2 class="popup__title">Что-то пошло не так!</h2>
         <p class="popup__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-        <button class="button popup__close popup__close--failure" type="button">Закрыть окно</button>
+      </div>
+      <div class="popup__bottom">
+        <button class="button popup__close popup__close--failure" type="button">Ок</button>
       </div>
     </section>
 
